# inverse-modeling-ceramics-thesis

./: .gitlab-ci.yml  .gitmodules  README.md  pyproject.toml
Papers/: Forward models.md  Inverse modeling.md
Weekly Progress/: Plan.md  Research Questions.pptx  hyperparameters.txt  sampling_comparisons.pptx  starting_points.txt
incoker-inv/: __init__.py  adapt.py  adaptive_training.py  bayesian_opt.py  cleanup_failed.py  gradient_descent_opt.py  gradient_opt.py  gradient_opt_with_adaptive.py  grid_search.py  plot_gp_evolution.py  plots.py  predict.py  reverse_training.py  standard_training.py  test_grad.py  training.py  training_data_rve_database.npy
incoker-inv/data/: thermal_conductivity_tcc_64.csv
incoker-inv/direct_inverse_training/: __init__.py  reverse_training.py
incoker-inv/gradient_testing/: __init__.py  test_grad.py  test_grad_gpr.py
incoker-inv/models/: 100_CTE_adapt.joblib  100_PR_adapt.joblib  2_GBR.joblib  2d_model.joblib  GradientBoosting.joblib
incoker-inv/offline_inverse_design/: __init__.py
incoker-inv/offline_inverse_design/optimization/: __init__.py  bayesian_opt.py  gradient_opt.py  kernel_comparison.py
incoker-inv/offline_inverse_design/training/: __init__.py  feature_set_viz.py  grid_search.py  standard_training.py
incoker-inv/online_inverse_design/: __init__.py  plot_adaptive.py  plot_gp_evolution.py
incoker-inv/online_inverse_design/optimization/: __init__.py  gradient_opt.py  gradient_opt_with_adaptive.py
incoker-inv/online_inverse_design/training/: __init__.py  adapt_to_standard.py  config.yaml  generate_predict.py  generate_predict_utils.py  online_adapt.py  online_training.py
incoker-inv/optimizaiton/: bayesian_opt.py  gradient_descent.py  gradient_opt.py  gradient_opt_with_adaptive.py  kernel_comparison.py  new_tc_gradient_opt.py
incoker-inv/simlopt/: reconstruction_2D_basicadapt_minimal.py
incoker-inv/simlopt/.pylint.d/: optimization.basicadapt1.stats
incoker-inv/simlopt/dataBasic example_2D_1E5/: log.txt
incoker-inv/simlopt/gpr/: gaussianprocess.py  variationalgaussianprocess.py
incoker-inv/simlopt/hyperparameter/: hyperparameteroptimization.py
incoker-inv/simlopt/optimization/: basicadapt_multible_new.py  errormodel_new.py
incoker-inv/training/: adapt.py  adapt_to_standard.py  adaptive_training.py  grid_search.py  new_tconductivity_training.py  nn_grid_search.py  online_adapt.py  online_adaptive_training.py  online_training.py  plot_adaptive.py  rev_gpr_grid_test.py  reverse_training.py  standard_training.py
incoker_inverse/: __init__.py  cleanup_failed.py  plots.py  predict.py
incoker_inverse/direct_inverse_training/: __init__.py  reverse_training.py
incoker_inverse/gradient_testing/: __init__.py  test_grad.py  test_grad_gpr.py
incoker_inverse/models/: 100_CTC_adapt.joblib  100_YM_adapt.joblib
incoker_inverse/offline_inverse_design/: __init__.py
incoker_inverse/offline_inverse_design/optimization/: __init__.py  gradient_opt.py
incoker_inverse/offline_inverse_design/training/: __init__.py  feature_set_viz.py  grid_search.py  standard_training.py
incoker_inverse/online_inverse_design/: generate_validation_data.py  plot_adaptive.py  validation_config.yaml
incoker_inverse/online_inverse_design/optimization/: __init__.py  gradient_opt.py  gradient_opt_with_adaptive.py
incoker_inverse/online_inverse_design/training/: __init__.py  adapt_to_standard.py  generate_predict_utils.py  online_adapt.py  online_training.py
incoker_inverse/simlopt/.pylint.d/: basicfunctions.reconstruction.standarddeviation1.stats  plotting1.stats
incoker_inverse/simlopt/.spyproject/: workspace.ini
incoker_inverse/simlopt/gpr/: gaussianprocess.py  variationalgaussianprocess.py
incoker_inverse/simlopt/hyperparameter/: hyperparameteroptimization.py  usage.py
incoker_inverse/simlopt/optimization/: basicadapt_multible_FEM_4D_surrogate.py  basicadapt_multible_Kaskade_const.py  basicadapt_multible_new.py  completeadapt_multible_new.py  errormodel_new.py  testcases.py  utilities.py
simlopt/: reconstruction_2D_basicadapt_minimal.py
simlopt/.pylint.d/: TESTDGPR1.stats  gpr.gaussianprocess1.stats  optimization.extendedadapt1.stats
simlopt/.spyproject/config/: workspace.ini
simlopt/IOlogging/: iotofile.py
simlopt/basicfunctions/covariance/: cov.py
simlopt/basicfunctions/derivative/: dGPR.py
simlopt/basicfunctions/reconstruction/: datahandling.py  functional.py  norm.py  recon.py  recon_lsq.py  standarddeviation.py
simlopt/basicfunctions/utils/: arrayhelpers.py  createfolderstructure.py  creategrid.py  distance.py  plotting.py
simlopt/dataBasic example_2D_1E5/: log.txt
simlopt/dataBasic example_2D_1E5/iteration_log/: iteration_0.txt  iteration_1.txt  iteration_10.txt  iteration_11.txt  iteration_12.txt  iteration_13.txt  iteration_14.txt  iteration_15.txt  iteration_16.txt  iteration_17.txt  iteration_18.txt  iteration_19.txt  iteration_2.txt  iteration_20.txt  iteration_21.txt  iteration_22.txt  iteration_23.txt  iteration_24.txt  iteration_25.txt  iteration_26.txt  iteration_27.txt  iteration_28.txt  iteration_29.txt  iteration_3.txt  iteration_30.txt  iteration_31.txt  iteration_32.txt  iteration_33.txt  iteration_4.txt  iteration_5.txt  iteration_6.txt  iteration_7.txt  iteration_8.txt  iteration_9.txt
simlopt/gpr/: gaussianprocess.py
simlopt/hyperparameter/: hyperparameteroptimization.py  usagemultistart.py
simlopt/optimization/: basicadapt_multible_FEM.py  basicadapt_multible_FEM_constant.py  basicadapt_multible_Kaskade.py  basicadapt_multible_new.py  completeadapt.py  completeadapt_multible_JCM.py  constadapt.py  constadapt_JCM.py  constadapt_complete_JCM.py  errormodel_new.py  extendedadapt_multible.py  functionprototypes.py  testcases.py  utilities.py  workmodel.py
tests/: __init__.py  test_incoker_inv.py
(+848 files in other folders)
