[tool.poetry]
name = "incoker-inv"
version = "0.1.0"
description = ""
authors = ["rayan967 <36110753+rayan967@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "incoker_inv"}]

[tool.poetry.dependencies]
python = "^3.9,<3.12"
scikit-learn = "1.3.0"
pytest = "^7.3.1"
pydoe = "^0.3.8"
tabulate = "^0.9.0"
jax = "^0.4.13"
jaxlib = "^0.4.13"
scikit-optimize = "^0.9.0"
matplotlib = "^3.8.0"
torch = "^2.1.0"
dunamai = "^1.15.0"
numpy = "^1.23.4"
tqdm = "^4.64.1"
pandas = "^2.0.1"
openpyxl = "^3.1.2"
mpaut = {path = "incoker-inv/incoker-micro-sims/mpaut", develop = true}
mercdpm = {path = "incoker-inv/incoker-micro-sims/mercurydpm-structure-generation", develop = true}
incoker-micro-sims = {path = "incoker-inv/incoker-micro-sims/", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
